--- a/Java Practice/BasicOfOOP/.vscode/launch.json
+++ b/Java Practice/BasicOfOOP/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - AssignmentMain",
+            "request": "launch",
+            "mainClass": "com.revature.AssignmentMain",
+            "projectName": "BasicOfOOP"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - App",
             "request": "launch",
             "mainClass": "com.revature.App",
