--- a/Java Practice/Interface/Advanced_Java/CollectionsAPI/.vscode/launch.json
+++ b/Java Practice/Interface/Advanced_Java/CollectionsAPI/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - MainClass",
+            "request": "launch",
+            "mainClass": "com.revCollections.MainClass",
+            "projectName": "CollectionsAPI"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - App",
             "request": "launch",
             "mainClass": "com.revCollections.App",
